# TinyBitTorrent

./: .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  build.sh  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
src/: main.cpp
src/bencode/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  value.hpp
src/cmd/: cmd.cpp  cmd.hpp
src/download/: download.cpp  download.hpp
src/http/: http_client.cpp  http_client.hpp
src/lib/nlohmann/: json.hpp
src/magnet/: magnet.cpp  magnet.hpp
src/output/: output.cpp  output.hpp
src/peer/: message.cpp  message.hpp  peer.cpp  peer.hpp
src/torrent/: metainfo.cpp  metainfo.hpp
src/tracker/: tracker.cpp  tracker.hpp
src/util/: bytes.hpp  net_util.hpp  random.hpp  sha1.cpp  sha1.hpp  socket.cpp  socket.hpp  url_encode.cpp  url_encode.hpp
tests/: CMakeLists.txt  test_bencode.cpp  test_e2e.cpp  test_magnet.cpp  test_message.cpp  test_peer.cpp  test_sha1.cpp  test_torrent.cpp
